syntax = "proto3";

package c1.connector.v2;

option go_package = "github.com/conductorone/baton-sdk/pb/c1/connector/v2";

import "google/protobuf/timestamp.proto";

message UsePreviousSyncResults {}

message PreviousSyncMetadata {
  string sync_id = 1;
  google.protobuf.Timestamp last_processed_at = 2;
  string etag = 3;
}